--- a/ui/src/main/resources/tdd/vendingMachine/ui/machine/VendingMachine.fxml
+++ b/ui/src/main/resources/tdd/vendingMachine/ui/machine/VendingMachine.fxml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-      xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="tdd.vendingMachine.ui.machine.VendingMachineController">
+<?import javafx.scene.layout.RowConstraints?>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0"
+      stylesheets="/styles/vendingMachine.css"
+      xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tdd.vendingMachine.ui.machine.VendingMachineController">
     <children>
-        <Label fx:id="helloLabel" layoutX="113.0" layoutY="83.0" text="Hello world"/>
+        <TextField styleClass="machine-display" disable="true"
+                   layoutX="500.0" layoutY="28.0" prefHeight="51.0" prefWidth="192.0" text="${controller.display}"/>
+        <GridPane fx:id="shelvesPane" layoutX="14.0" layoutY="28.0" prefHeight="312.0" prefWidth="400.0">
+        </GridPane>
+        <GridPane layoutX="500.0" layoutY="100.0" prefHeight="240.0" prefWidth="192.0" maxHeight="Infinity" maxWidth="Infinity">
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" percentWidth="100"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" percentWidth="100"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" percentWidth="100"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" percentHeight="100"/>
+                <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" percentHeight="100"/>
+                <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" percentHeight="100"/>
+                <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" percentHeight="100"/>
+            </rowConstraints>
+            <children>
+                <Button mnemonicParsing="false" text="7" styleClass="machine-btn"/>
+                <Button mnemonicParsing="false" text="8" styleClass="machine-btn" GridPane.columnIndex="1"/>
+                <Button mnemonicParsing="false" text="9" styleClass="machine-btn" GridPane.columnIndex="2"/>
+                <Button mnemonicParsing="false" text="4" styleClass="machine-btn" GridPane.rowIndex="1"/>
+                <Button mnemonicParsing="false" text="5" styleClass="machine-btn" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                <Button mnemonicParsing="false" text="6" styleClass="machine-btn" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+                <Button mnemonicParsing="false" text="1" styleClass="machine-btn" GridPane.rowIndex="2"/>
+                <Button mnemonicParsing="false" text="2" styleClass="machine-btn" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                <Button mnemonicParsing="false" text="3" styleClass="machine-btn" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+                <Button mnemonicParsing="false" text="CANCEL" styleClass="machine-btn" GridPane.rowIndex="3"/>
+                <Button mnemonicParsing="false" text="0" styleClass="machine-btn" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                <!--<Button mnemonicParsing="false" text="Service" styleClass="machine-btn" GridPane.columnIndex="2" GridPane.rowIndex="3" />-->
+            </children>
+        </GridPane>
     </children>
 </Pane>
