--- a/ui/src/main/resources/tdd/vendingMachine/ui/machine/VendingMachine.fxml
+++ b/ui/src/main/resources/tdd/vendingMachine/ui/machine/VendingMachine.fxml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0"
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="800.0"
       stylesheets="/styles/vendingMachine.css"
-      xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tdd.vendingMachine.ui.machine.VendingMachineController">
+      xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="tdd.vendingMachine.ui.machine.view.VendingMachineController">
     <children>
-        <TextField styleClass="machine-display" disable="true"
-                   layoutX="500.0" layoutY="28.0" prefHeight="51.0" prefWidth="192.0" text="${controller.display}"/>
-        <GridPane fx:id="shelvesPane" layoutX="14.0" layoutY="28.0" prefHeight="312.0" prefWidth="400.0">
+        <Label styleClass="machine-display" disable="true"
+               layoutX="500.0" layoutY="28.0" prefHeight="51.0" prefWidth="192.0"
+               fx:id="displayLabel"/>
+        <GridPane fx:id="shelvesPane" layoutX="14.0" layoutY="28.0" prefHeight="312.0" prefWidth="400.0"/>
+        <GridPane fx:id="productTray" layoutX="14.0" layoutY="500.0" prefWidth="400.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="312.0" percentWidth="100"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="120.0" vgrow="ALWAYS" percentHeight="100"/>
+            </rowConstraints>
+            <children>
+                <StackPane onMouseClicked="#handleProductTrayAction">
+                    <children>
+                        <TextArea fx:id="productTrayLabel" styleClass="tray"/>
+                    </children>
+                </StackPane>
+            </children>
         </GridPane>
-        <GridPane layoutX="500.0" layoutY="100.0" prefHeight="240.0" prefWidth="192.0" maxHeight="Infinity" maxWidth="Infinity">
+        <GridPane layoutX="500.0" layoutY="100.0" prefHeight="240.0" prefWidth="192.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" percentWidth="100"/>
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" percentWidth="100"/>
@@ -28,18 +39,76 @@
                 <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" percentHeight="100"/>
             </rowConstraints>
             <children>
-                <Button mnemonicParsing="false" text="7" styleClass="machine-btn"/>
-                <Button mnemonicParsing="false" text="8" styleClass="machine-btn" GridPane.columnIndex="1"/>
-                <Button mnemonicParsing="false" text="9" styleClass="machine-btn" GridPane.columnIndex="2"/>
-                <Button mnemonicParsing="false" text="4" styleClass="machine-btn" GridPane.rowIndex="1"/>
-                <Button mnemonicParsing="false" text="5" styleClass="machine-btn" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                <Button mnemonicParsing="false" text="6" styleClass="machine-btn" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-                <Button mnemonicParsing="false" text="1" styleClass="machine-btn" GridPane.rowIndex="2"/>
-                <Button mnemonicParsing="false" text="2" styleClass="machine-btn" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                <Button mnemonicParsing="false" text="3" styleClass="machine-btn" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
-                <Button mnemonicParsing="false" text="CANCEL" styleClass="machine-btn" GridPane.rowIndex="3"/>
-                <Button mnemonicParsing="false" text="0" styleClass="machine-btn" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-                <!--<Button mnemonicParsing="false" text="Service" styleClass="machine-btn" GridPane.columnIndex="2" GridPane.rowIndex="3" />-->
+                <Button mnemonicParsing="false" text="7" styleClass="machine-btn"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="8" styleClass="machine-btn" GridPane.columnIndex="1"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="9" styleClass="machine-btn" GridPane.columnIndex="2"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="4" styleClass="machine-btn" GridPane.rowIndex="1"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="5" styleClass="machine-btn" GridPane.columnIndex="1" GridPane.rowIndex="1"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="6" styleClass="machine-btn" GridPane.columnIndex="2" GridPane.rowIndex="1"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="1" styleClass="machine-btn" GridPane.rowIndex="2"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="2" styleClass="machine-btn" GridPane.columnIndex="1" GridPane.rowIndex="2"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="3" styleClass="machine-btn" GridPane.columnIndex="2" GridPane.rowIndex="2"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="CANCEL" styleClass="machine-btn" GridPane.rowIndex="3"
+                        onAction="#handleCancelButtonAction"/>
+                <Button mnemonicParsing="false" text="0" styleClass="machine-btn" GridPane.columnIndex="1" GridPane.rowIndex="3"
+                        onAction="#handleCodeButtonAction"/>
+                <Button mnemonicParsing="false" text="OK" styleClass="machine-btn" GridPane.columnIndex="2" GridPane.rowIndex="3"
+                        onAction="#handleOkButtonAction"/>
+            </children>
+        </GridPane>
+        <GridPane layoutX="500.0" layoutY="360.0" prefHeight="120.0" prefWidth="192.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" percentWidth="100"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" percentWidth="100"/>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" percentWidth="100"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" percentHeight="100"/>
+                <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" percentHeight="100"/>
+            </rowConstraints>
+            <children>
+                <Button mnemonicParsing="false" text="5" styleClass="coin-btn"
+                        onAction="#handleCoinButtonAction"
+                        id="coin5"/>
+                <Button mnemonicParsing="false" text="2" styleClass="coin-btn" GridPane.columnIndex="1"
+                        onAction="#handleCoinButtonAction"
+                        id="coin2"/>
+                <Button mnemonicParsing="false" text="1" styleClass="coin-btn" GridPane.columnIndex="2"
+                        onAction="#handleCoinButtonAction"
+                        id="coin1"/>
+                <Button mnemonicParsing="false" text="0.5" styleClass="coin-btn" GridPane.rowIndex="1"
+                        onAction="#handleCoinButtonAction"
+                        id="coin0_5"/>
+                <Button mnemonicParsing="false" text="0.2" styleClass="coin-btn" GridPane.columnIndex="1" GridPane.rowIndex="1"
+                        onAction="#handleCoinButtonAction"
+                        id="coin0_2"/>
+                <Button mnemonicParsing="false" text="0.1" styleClass="coin-btn" GridPane.columnIndex="2" GridPane.rowIndex="1"
+                        onAction="#handleCoinButtonAction"
+                        id="coin0_1"/>
+            </children>
+        </GridPane>
+        <GridPane layoutX="500.0" layoutY="500.0" prefWidth="192.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="192.0" prefWidth="100.0" percentWidth="100"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="80.0" prefHeight="120.0" vgrow="ALWAYS" percentHeight="100"/>
+            </rowConstraints>
+            <children>
+                <StackPane onMouseClicked="#handleCoinTrayAction">
+                    <children>
+                        <TextArea fx:id="coinTrayLabel" styleClass="tray"/>
+                    </children>
+                </StackPane>
             </children>
         </GridPane>
     </children>
